Fixed too short button for Login, Register and Verification related UI.

--- a/public/css/login-register-verify.css
+++ b/public/css/login-register-verify.css
@@ -52,7 +52,6 @@ body{
   vertical-align: middle;
   white-space: nowrap;
   width: auto;
-  max-width: 400px;
   min-width: min-content;
   border-color: #8e918f;
 }
